--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pietrorpedro.github.io/HotelFinder",
+  "homepage": "https://pietrorpedro.github.io/HotelFinder/#/",
   "name": "at-react",
   "private": true,
   "version": "0.0.0",
